menu slider done

--- a/src/css/_home.scss
+++ b/src/css/_home.scss
@@ -2,7 +2,7 @@ $blue-A: #7164a9;
 $blue-B: #da6abf;
 $blue-C: #94bec6;
 
-.home {
+#home {
    position: relative;
    .wall {
       position: fixed;
