--- a/src/css/_global.scss
+++ b/src/css/_global.scss
@@ -1,3 +1,4 @@
+@import url("https://fonts.googleapis.com/css2?family=Unbounded:wght@400;700&display=swap");
 *,
 *::before,
 *::after {
@@ -5,6 +6,17 @@
    padding: 0;
    box-sizing: border-box;
 }
+ul,
+li {
+   list-style: none;
+}
 body {
-   background-color: #333;
+   font-family: "Unbounded", cursive;
+   .wall {
+      height: 100vh;
+      position: fixed;
+      display: flex;
+      top: 0;
+      left: 0;
+   }
 }
