--- a/src/css/_about.scss
+++ b/src/css/_about.scss
@@ -1,5 +1,5 @@
 #about {
-   // display: none;
+   display: none;
    position: relative;
 
    nav {
@@ -70,7 +70,8 @@
          margin: auto;
          p {
             flex: 1 1 50%;
-            font-size: 1.5rem;
+            font-size: clamp(0.9rem, 2vw, 1.6rem);
+            line-height: 1.3;
             color: white;
          }
          .image {
@@ -82,5 +83,81 @@
             }
          }
       }
+      content {
+         .town {
+            text-align: center;
+            margin: 60px 0;
+            max-width: 100%;
+            p {
+               margin: 20px 0;
+               line-height: 1.4;
+            }
+            img {
+               max-width: 100%;
+               border-radius: 20px;
+               box-shadow: 0 0 5px #777;
+            }
+         }
+         .container {
+            max-width: 100%;
+            margin: 60px 0 100px;
+            h2 {
+               text-align: center;
+               margin: 30px 0;
+            }
+            .fig {
+               display: flex;
+               img {
+                  flex: 0 1 70%;
+                  max-width: 100%;
+                  border-radius: 20px;
+                  box-shadow: 0 0 5px #777;
+               }
+               .testi-box {
+                  flex: 1 0 30%;
+                  align-self: flex-end;
+                  margin-left: -80px;
+                  margin-bottom: -50px;
+                  background-color: #ddd;
+                  border-radius: 20px;
+                  padding: 30px;
+                  text-align: center;
+                  width: 200px;
+                  display: flex;
+                  flex-direction: column;
+                  align-items: center;
+                  box-shadow: 0 1px 7px #333;
+                  .stars {
+                     width: 100px;
+                     margin: -10px;
+                     box-shadow: none;
+                  }
+                  .profile {
+                     max-width: 100%;
+                     border-radius: 50%;
+                     width: 100px;
+                     box-shadow: 0 1px 7px #333;
+                  }
+               }
+            }
+         }
+      }
+      .visit {
+         text-align: center;
+         max-width: 100%;
+         img {
+            max-width: 100%;
+            border-radius: 20px;
+         }
+      }
+   }
+   .footer {
+      text-align: center;
+      width: 76%;
+      margin: 40px auto;
+      background-color: rgba(221, 221, 221, 0.582);
+      padding: 20px;
+      font-size: 0.6rem;
+      border-radius: 20px;
    }
 }
