--- a/src/css/_home.scss
+++ b/src/css/_home.scss
@@ -13,7 +13,7 @@ $blue-C: #94bec6;
    .img-holder {
       .bg {
          height: 100vh;
-         background-image: url("/dist/imgs/gum1.png");
+         background-image: url("../imgs/gum1.png");
          background-position: center bottom;
          background-repeat: no-repeat;
       }
