--- a/src/css/_home.scss
+++ b/src/css/_home.scss
@@ -13,7 +13,7 @@ $blue-C: #94bec6;
    .img-holder {
       .bg {
          height: 100vh;
-         background-image: url("../imgs/gum1.png");
+         background-image: url("../src/imgs/gum1.png");
          background-position: center bottom;
          background-repeat: no-repeat;
       }
@@ -54,7 +54,7 @@ $blue-C: #94bec6;
       }
       &.wiggle {
          display: inline-block;
-         animation: wiggle 5s infinite;
+         animation: wiggle 3s infinite;
          &:hover {
             scale: 1.05;
             animation: none;
@@ -100,7 +100,7 @@ $blue-C: #94bec6;
       }
       &.wiggle {
          display: inline-block;
-         animation: wiggle 5s infinite 1s;
+         animation: wiggle 3s infinite 1s;
          &:hover {
             scale: 1.05;
             animation: none;
