--- a/src/css/_home.scss
+++ b/src/css/_home.scss
@@ -11,12 +11,12 @@ $blue-C: #94bec6;
       margin: 0 auto;
    }
    .img-holder {
-      .bg {
-         height: 100vh;
-         background-image: url("../src/imgs/gum1.png");
-         background-position: center bottom;
-         background-repeat: no-repeat;
-      }
+      // .bg {
+      //    height: 100vh;
+      //    background-image: url("gum1.png");
+      //    background-position: center bottom;
+      //    background-repeat: no-repeat;
+      // }
    }
    .menu-holder {
       cursor: pointer;
